65 add sorting in tables (#71)
* feat: Added scripts for sorting tables

* feat: Added blocks with table sorting scripts

(cherry picked from commit dc3b576296f752c1ee5af3a38ef2dea12f2a1982)

--- a/src/main/resources/templates/student/contests.html
+++ b/src/main/resources/templates/student/contests.html
@@ -12,6 +12,9 @@
     <th:block th:include="fragments/form :: head"></th:block>
     <th:block th:include="fragments/menu :: head"></th:block>
 </head>
+
+<div th:replace="fragments/table :: table-sort"></div>
+
 <body>
 
 <div th:replace="fragments/main :: background"></div>
